# ice-cream-dataops

./: config.prod.yaml  config.test.yaml  pyproject.toml
modules/: pyproject.toml
modules/bootcamp/data_foundation/auth/: data_developer.yaml
modules/bootcamp/ice_cream_api/auth/: icapi_extractors.yaml
modules/bootcamp/ice_cream_api/data_sets/: data_sets.yaml
modules/bootcamp/ice_cream_api/functions/: schedules.yaml
modules/bootcamp/ice_cream_api/transformations/: icapi_ts_assets_contextualization.schedule.yaml
modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.yaml
modules/bootcamp/use_cases/oee/data_sets/: data_sets.yaml
