[tool.poetry]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = ["Himanshucognite <himanshu.chourasia@gds.ey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "^0.3.4"
numpy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
